--- a/src/css/exam.css
+++ b/src/css/exam.css
@@ -1,3 +1,9 @@
 .top-upper-layer{
     margin-left: 15px;    
 }
+.new-exam-btn{
+    width: 200px;
+    margin: 0 auto;
+    margin-top: 30px;
+    margin-bottom: 30px; 
+}
